--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Web page #1</title>
 </head>
+  
 <body></body>
   <h1>My first web page</h1>
   <h2>Written with the guidance of Epicodus</h2>
